implement base screen'

--- a/src/styles/_variables.styl
+++ b/src/styles/_variables.styl
@@ -8,3 +8,8 @@ $fontSize = 16px
 $lineHeight = 1.4
 $baseLine = $fontSize * $lineHeight
 $fontFamily = 'Helvetica Neue', Helvetica, Arial, sans-serif
+
+
+// Custom
+$mainLightColor = #FFEA60
+$mainDarkColor = rgb(43, 43, 37)
