--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -5,7 +5,9 @@
 @import 'base/core'
 @import 'base/fonts'
 @import 'base/utilities'
+@import './components/**/**'
 
 body
 	font-family RobotoCondensedRegular
 	font-size 20px
+	color alpha($mainDarkColor, 90%)
