add base logic to mongodb and redux actions

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -11,3 +11,5 @@ body
 	font-family RobotoCondensedRegular
 	font-size 20px
 	color alpha($mainDarkColor, 90%)
+	overflow hidden
+	height calc(100vh - 40px)
