--- a/src/styles/components/HelloContainer.styl
+++ b/src/styles/components/HelloContainer.styl
@@ -1,7 +1,8 @@
 .hello-container
 	background-color $mainLightColor
-	height 100vh
-	padding 100px 20px 0 20px
+	height calc(100vh - 40px)
+	overflow hidden
+	padding 20px
 
 	&__form
 		display -webkit-flex
