--- a/src/styles/_mixins.styl
+++ b/src/styles/_mixins.styl
@@ -1,9 +1,9 @@
 // grid-template-areas
 g-template-areas(areas...)
-  final = ''
-  for area in areas
-    final += '"' + area + '" '
-  grid-template-areas unquote(final)
+	final = ''
+	for area in areas
+		final += '"' + area + '" '
+	grid-template-areas unquote(final)
 
 // Центрирование по горизонтали блока заданной ширины
 container($width)
@@ -141,3 +141,51 @@ flexible()
 unflexible()
 	flex-grow 0
 	flex-shrink 0
+
+triangle(width = 10px, height = 10px, direction = 'bottom', color = #000)
+
+	// Base triangle styles
+	width 0
+	height 0
+	background 0
+	border-style solid
+
+	// Styles for each direction
+	directions = {
+		top: {
+			border-width: 0 (width * .5) height (width * .5),
+			border-color: transparent transparent color transparent
+		},
+		topRight: {
+			border-width: 0 width height 0,
+			border-color: transparent color transparent transparent
+		},
+		right: {
+			border-width: (height * .5) 0 (height *.5) width,
+			border-color: transparent transparent transparent color
+		},
+		bottomRight: {
+			border-width: 0 0 height width,
+			border-color: transparent transparent color transparent
+		},
+		bottom: {
+			border-width: height (width * .5) 0 (width * .5),
+			border-color: color transparent transparent transparent
+		},
+		bottomLeft: {
+			border-width: width 0 0 height,
+			border-color: transparent transparent transparent color
+		},
+		left: {
+			border-width: (height * .5) width (height * .5) 0,
+			border-color: transparent color transparent transparent
+		},
+		topLeft: {
+			border-width: height width 0 0,
+			border-color: color transparent transparent transparent
+		}
+	}
+
+	// Mixin styles for passed direction
+	styles = directions[direction]
+	{styles}
