--- a/src/styles/base/fonts.styl
+++ b/src/styles/base/fonts.styl
@@ -3,3 +3,9 @@
 	src url('../static/assets/fonts/RobotoCondensed/RobotoCondensedRegular.ttf')
 	font-style normal
 	font-weight 400
+
+@font-face
+	font-family RobotoCondensedLight
+	src url('../static/assets/fonts/RobotoCondensed/RobotoCondensedLight.ttf')
+	font-style normal
+	font-weight 400
