--- a/src/styles/components/Avatar.styl
+++ b/src/styles/components/Avatar.styl
@@ -16,3 +16,8 @@
 	&--message
 		border 2px solid alpha(#2B2B25, .43)
 		color alpha(#2B2B25, .7)
+
+	&--message-input
+		background-color rgba(0, 0, 0, 0.6);
+		color #fff
+		margin-right 10px
