--- a/src/styles/components/MessageInput.styl
+++ b/src/styles/components/MessageInput.styl
@@ -1,11 +1,12 @@
 .message-input
 	position fixed
 	padding 0 20px
+
 	bottom 0px
 	left 0
 	background-color #fff
 	min-height 60px
-	width 100%
+	width calc(100% - 20px)
 	display -webkit-flex
 	display -ms-flex
 	display flex
@@ -14,4 +15,4 @@
 
 	&__send
 		position relative
-		left -26px
+		left -8px
