implement basic communication to server

--- a/src/styles/components/UsersEntered.styl
+++ b/src/styles/components/UsersEntered.styl
@@ -30,12 +30,13 @@
 		justify-content space-between
 		align-items center
 		border-radius 30px
+		margin-bottom 10px
 
 		&__name
 			font-size 16px
 			text-align right
 
-		&__time
+		&__age
 			font-size 13px
 			text-align right
 			color alpha(#fff, .8)
