--- a/src/styles/components/ChatContainer.styl
+++ b/src/styles/components/ChatContainer.styl
@@ -15,3 +15,10 @@
 		align-items center
 		position relative
 		left -20px
+
+	&__top-line--left-part
+		display -webkit-flex
+		display -ms-flex
+		display flex
+		align-items center
+		flex-grow 1
